feat: enhance key rotation logging and add request body handling

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,6 @@ compatibility_date = "2025-07-05"
 [[kv_namespaces]]
 binding = "COOL"
 id      = "12f7af5ddd1944f1932c8533c42f339c"
+
+[observability.logs]
+enabled = true
